syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// The request message containing the user's name.
message HelloRequest {
  string name = 1;

  google.protobuf.Timestamp moment = 2;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;

  string span_id = 2;
}

// The request message containing numbers.
message SumRequest {
  int32 number = 1;
}

// The response message containing sum of the numbers.
message SumResponse {
  int32 result = 1;
}

// The demo service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/v1/hello"
      body: "*"
    };
  }

  // Calculates sum of numbers
  rpc Sum (stream SumRequest) returns (SumResponse) {
    option (google.api.http) = {
      post: "/v1/sum"
      body: "*"
    };
  }
}